--- a/redirects/pages.yml
+++ b/redirects/pages.yml
@@ -615,9 +615,6 @@
 - from: /docs/reference/collection-ordering.html
   to: /docs/collection-ordering.html
 
-- from: /docs/reference/platform-specific-declarations.html
-  to: /docs/multiplatform-connect-to-apis.html
-
 - from: /docs/reference/operator-overloading.html
   to: /docs/operator-overloading.html
 
@@ -629,9 +626,6 @@
 
 - from: /docs/reference/scope-functions.html
   to: /docs/scope-functions.html
-
-- from: /docs/reference/mpp-connect-to-apis.html
-  to: /docs/multiplatform-connect-to-apis.html
 
 - from: /docs/reference/type-aliases.html
   to: /docs/type-aliases.html
@@ -681,3 +675,12 @@
 
 - from: /user-groups/support.html
   to: /docs/kug-guidelines.html#support-for-kugs-from-jetbrains
+
+- from:
+    - /docs/platform-specific-declarations.html
+    - /docs/mpp-connect-to-apis.html
+    - /docs/kmm-connect-to-platform-specific-apis.html
+    - /docs/multiplatform-mobile-connect-to-platform-specific-apis.html
+    - /docs/reference/platform-specific-declarations.html
+    - /docs/reference/mpp-connect-to-apis.html
+  to: https://www.jetbrains.com/help/kotlin-multiplatform-dev/multiplatform-connect-to-apis.html
